--- a/bm/conf/model/clip_conv.yaml
+++ b/bm/conf/model/clip_conv.yaml
@@ -20,6 +20,11 @@ simpleconv:
   initial_linear: 270
   gelu: true
   merger_pos_dim: 2048
+  avg_pool_out: False 
+  adaptive_pooling_size: 1
+  flatten_out: False
+  flatten_out_channels: 512
+  strides: [1,1,1,1,1,1,1,1,1,1]
 
 optim:
   loss: clip
