--- a/bm/conf/model/clip_conv.yaml
+++ b/bm/conf/model/clip_conv.yaml
@@ -25,6 +25,7 @@ simpleconv:
   flatten_out: False
   flatten_out_channels: 512
   strides: [1,1,1,1,1,1,1,1,1,1]
+  conv_dropout: 0.0
 
 optim:
   loss: clip
