--- a/bm/conf/model_defaults/defaults.yaml
+++ b/bm/conf/model_defaults/defaults.yaml
@@ -91,3 +91,22 @@ simpletransformer:
   depth: 4
   nhead: 8
   subject_layers: false
+  positional_embedding: false
+  merger: false
+  merger_pos_dim: 2048
+  merger_channels: 272
+
+timesnet:
+  hidden:
+    meg: 320
+  depth: 2
+  subject_layers: false
+  sequence_lenth: 361  
+  num_kernels: 6
+  top_k: 3
+  dropout_projection: 0.3
+  d_model: 32
+  d_ff: 32
+  flatten_out_channels: 1024
+  merger: false
+  merger_pos_dim: 2048
