Add ability to remove interpolation

--- a/bm/conf/features_defaults/features_defaults.yaml
+++ b/bm/conf/features_defaults/features_defaults.yaml
@@ -26,5 +26,7 @@ dset:
       layers: [14, 15, 16, 17, 18]
       device: cpu
       random: false
+      is_interpolate: true
+      size : 150
     Wav2VecChunk:
       device: cpu
