--- a/bm/conf/feature_model/conv_wave.yaml
+++ b/bm/conf/feature_model/conv_wave.yaml
@@ -9,3 +9,7 @@ feature_model_params:
   adaptive_pooling_size:  1
   n_out_channels: 512
   dropout_value: 0.0
+  layers_block: false
+  layers_number: 0
+  activation: 'glu'
+  layers_dropout: 0.0
