--- a/bm/conf/model_defaults/defaults.yaml
+++ b/bm/conf/model_defaults/defaults.yaml
@@ -39,7 +39,6 @@ simpleconv:
   linear_out: false
   complex_out: false
   # Conv layer
-  kernel_size: 5
   dilation_growth: 2
   dilation_period:
   skip: false
@@ -84,6 +83,10 @@ simpleconv:
   adaptive_pooling_size: 1,
   flatten_out_channels: 512
   strides: [1,1,1,1,1,1,1,1,1,1]
+  kernel_size: [3,3,3,3,3,3,3,3,3,3]
+  padding: [1,1,1,1,1,1,1,1,1,1]
+  seq_len: -1
+  auto_padding: true
 
 simpletransformer:
   hidden:
