--- a/bm/conf/model_defaults/defaults.yaml
+++ b/bm/conf/model_defaults/defaults.yaml
@@ -87,6 +87,7 @@ simpleconv:
   padding: [1,1,1,1,1,1,1,1,1,1]
   seq_len: -1
   auto_padding: true
+  is_deformable_conv: false
 
 simpletransformer:
   hidden:
