--- a/bm/conf/model_defaults/defaults.yaml
+++ b/bm/conf/model_defaults/defaults.yaml
@@ -119,3 +119,37 @@ timesnet:
   merger_pos_dim: 2048
   merger_channels: 270
   enc_embedding: true
+
+cnntransformer:
+  hidden:
+    meg: 320
+  batch_norm: true
+  depth: 4
+  dilation_period: 4
+  skip: true
+  subject_layers: true
+  subject_dim: 0
+  complex_out: true
+  glu: 2
+  glu_context: 1
+  merger: true
+  initial_linear: 270
+  gelu: true
+  merger_pos_dim: 2048
+  avg_pool_out: False 
+  adaptive_pooling_size: 1
+  flatten_out: True
+  flatten_out_channels: 264
+  strides: [1,1,1,1,1,1,1,1,1,1]
+  conv_dropout: 0.0
+  kernel_size: [3,3,3,3,3,3,3,3,3,3]
+  padding: [1,1,1,1,1,1,1,1,1,1]
+  seq_len: 361
+  auto_padding: true
+  is_deformable_conv: false
+  in_channels_tranformer: 264
+  out_channels_transformer: 1024
+  dim_ff: 2048
+  nhead: 8
+  positional_embedding: False,
+  positional_embedding_dropout: 0.0 
