--- a/bm/conf/model/clip_conv.yaml
+++ b/bm/conf/model/clip_conv.yaml
@@ -14,6 +14,7 @@ simpleconv:
   subject_layers: true
   subject_dim: 0
   complex_out: true
+  linear_out: false
   glu: 2
   glu_context: 1
   merger: true
